--- a/index.html
+++ b/index.html
@@ -14,39 +14,26 @@
     <div id="app">
 
         <div class="container">
-            <div class="slider-wrapper" tabindex="0">
+            <div @mouseover="hover = true" @mouseout="hover = false" class="slider-wrapper" tabindex="0">
 
                 <div class="item">
-                    <img src="img/01.webp" alt="Spiderman" />
+                    <img :src="images[activeImage]" :alt="titles[activeImage]" />
+                    <div></div>
                     <div class="text">
-                        <h3>Spiderman</h3>
+                        <h3>{{titles[activeImage]}}</h3>
                         <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et temporibus voluptatum suscipit
-                            tempore aliquid deleniti aut
-                            veniam inventore eligendi ex ad ullam, cumque provident totam omnis, magnam dolores dolorum
-                            corporis.
+                            {{texts[activeImage]}}
                         </p>
                     </div>
                 </div>
 
                 <div class="thumbs">
-                    <div class="prev"></div>
-                    <div class="next"></div>
-                    <div class="thumb active">
-                        <img src="img/01.webp" alt="Svezia" />
-                    </div>
+                    <div class="prev" @click="backButton"></div>
+                    <div class="next" @click="nextButton"></div>
                     <div class="thumb">
-                        <img src="img/02.webp" alt="Ratchet & Clank" />
+                        <img  v-for='(image, index) in images' :src="image" :alt="titles[activeImage]" @click="showCurrentImage(index)" :class="showActiveImage(index)" />
                     </div>
-                    <div class="thumb">
-                        <img src="img/03.webp" alt="Fortnite" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/04.webp" alt="Stray" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/05.webp" alt="Avengers" />
-                    </div>
+                    
                 </div>
 
             </div>
